feat: generate and validate tokens
